Fix Fullscreen Marquee h1 text align on desktop (#765)

--- a/express/blocks/fullscreen-marquee/fullscreen-marquee.css
+++ b/express/blocks/fullscreen-marquee/fullscreen-marquee.css
@@ -268,6 +268,7 @@
   .fullscreen-marquee .fullscreen-marquee-heading h1 {
     font-size: 80px;
     line-height: 90px;
+    text-align: center;
   }
 
   .fullscreen-marquee .fullscreen-marquee-heading p {
